--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: hovering
-description: A new Flutter package project.
-version: 0.0.1
-author:
-homepage:
+description: A new Flutter package to enable the hover effect on Flutter web.
+version: 1.0.0
+homepage: https://github.com/lalitjarwal/hovering
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
