--- a/example/hover_demo/pubspec.yaml
+++ b/example/hover_demo/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  hovering: ^1.0.0  
 
 
   # The following adds the Cupertino Icons font to your application.
